--- a/public/send.html
+++ b/public/send.html
@@ -19,7 +19,7 @@ color: white;
 border-radius: 50%;
 margin-top: 20%;">CLICK ME</a>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script>
   $(function() {
