--- a/slide/index.html
+++ b/slide/index.html
@@ -9,12 +9,37 @@
 	<div id="impress">
 		<div id="first" class="step slide">
 	        <img src="css/images/h5.jpg" alt="">
-	        <q>H5能力展示</q>
+	        <q>深入浅出H5的应用场景</q>
 	    </div>
 		<div class="step slide">
 			<h2>大家眼中的H5</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>前台</th>
+                        <th>产品</th>
+                        <th>客户端</th>
+                        <th>后台</th>
+                        <th>运营</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th><img style="width: 5em;" src="css/images/lan.jpg" alt=""></th>
+                        <th><img style="width: 5em;" src="css/images/4wd.jpg" alt=""></th>
+                        <th><img style="width: 5em;" src="css/images/san.jpg" alt=""></th>
+                        <th><img style="width: 5em;" src="css/images/toy.jpg" alt=""></th>
+                        <th><img style="width: 5em;" src="css/images/ip.jpg" alt=""></th>
+                    </tr>
+                </tbody>
+            </table>
+            <h2>那我们为什么要讲H5</h2>
+            <ol>
+                <li>体验</li>
+                <li>功能</li>
+                <li>性能</li>
+            </ol>
 		</div>
-
 	    <div class="step slide">
 	        <h2>广义上</h2>
 	        <div class="center">
@@ -36,29 +61,35 @@
 	    <div class="step slide">
 	        <h2>功能列表 - css3</h2>
 	        <h3>选择器</h3>
-	        <h3>@Font-face</h3>
-	        <h3>文字渲染</h3>
+	        <h3>@Font-face web font文字渲染：实现<a href="https://icomoon.io/app/#/select">图标字体</a></h3>
 	        <h3>多列布局</h3>
 			<h3>边框和颜色、圆角</h3>
 	        <h3>渐变效果</h3>
 	        <h3>阴影和反射</h3>
 	        <h3>背景效果</h3>
 	        <h3>盒子模型</h3>
+            <h3>响应式布局</h3>
 	        <h3>Transitions, Transforms 和 Animation</h3>
 	        <img src="css/images/css-a.png" alt="">
 	    </div>
 	    <div class="step slide">
 	        <h2>功能列表 - javascript</h2>
-	        
+	        <ol>
+                <li>WebSocket：实时通信&长连接</li>
+                <li>WebGL：3d效果</li>
+                <li>Local storage和web sql：离线缓存</li>
+                <li>File Api:读写本地文件</li>
+                <li>js sdk：获得原生应用的能力</li>
+	        </ol>
 	    </div>
 	    <div class="step slide">
 	        <h2>photowall<small>离线存储 + 本地存储 + 图片处理 + 实时通信 + 响应式布局应用</small></h2>
 	    </div>
 	    <div class="step slide">
-	        <h2>年会小火箭<small>卤蛋</small></h2>
+	        <h2>年会小火箭<small>实时通信+css3动画</small></h2>
 	    </div>
 	    <div class="step slide">
-	        <h2>图表应用<small>卤蛋</small></h2>
+	        <h2>图表应用<small>画图+3D效果</small></h2>
 	    </div>
 	    <div class="step slide">
 	        <h2>小游戏<small>bb</small></h2>
