--- a/slide/index.html
+++ b/slide/index.html
@@ -87,6 +87,8 @@
 	    </div>
 	    <div class="step slide">
 	        <h2>年会小火箭<small>实时通信+css3动画</small></h2>
+            <a id="reloadRocketFrame" style="cursor: pointer">刷新</a>
+            <iframe style="width: 100%;height: 85%;" id="rocketFrame" src="http://magic-pc:3000/counter.html"></iframe>
 	    </div>
 	    <div class="step slide">
 	        <h2>图表应用<small>画图+3D效果</small></h2>
@@ -129,6 +131,10 @@
 			});;
 		})
 		impress().init();
+
+        $('#reloadRocketFrame').click(function(){
+            $('#rocketFrame').attr('src', $('#rocketFrame').attr('src'));
+        });
 	</script>
 </body>
 </html>
