--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -88,7 +88,7 @@
 	    <div class="step slide">
 	        <h2>年会小火箭<small>实时通信+css3动画</small></h2>
             <a id="reloadRocketFrame" style="cursor: pointer">刷新</a>
-            <iframe style="width: 100%;height: 85%;" id="rocketFrame" src="http://magic-pc:3000/counter.html"></iframe>
+            <iframe style="width: 100%;height: 85%;" id="rocketFrame" src="http://cloud.eggcanfly.net:3000/counter.html"></iframe>
 	    </div>
 	    <div class="step slide">
 	        <h2>图表应用<small>画图+3D效果</small></h2>
