--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -13,7 +13,7 @@
 	    </div>
 		<div class="step slide">
 			<h2>大家眼中的H5</h2>
-            <table>
+            <table style="margin-top:20%;">
                 <thead>
                     <tr>
                         <th>前台</th>
@@ -25,20 +25,14 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th><img style="width: 5em;" src="css/images/lan.jpg" alt=""></th>
-                        <th><img style="width: 5em;" src="css/images/4wd.jpg" alt=""></th>
-                        <th><img style="width: 5em;" src="css/images/san.jpg" alt=""></th>
-                        <th><img style="width: 5em;" src="css/images/toy.jpg" alt=""></th>
-                        <th><img style="width: 5em;" src="css/images/ip.jpg" alt=""></th>
+                        <td<img style="width: 5em;" src="css/images/lan.jpg" alt=""></td>
+                        <td><img style="width: 5em;" src="css/images/4wd.jpg" alt=""></td>
+                        <td><img style="width: 5em;" src="css/images/san.jpg" alt=""></td>
+                        <td><img style="width: 5em;" src="css/images/toy.jpg" alt=""></td>
+                        <td><img style="width: 5em;" src="css/images/ip.jpg" alt=""></td>
                     </tr>
                 </tbody>
             </table>
-            <h2>那我们为什么要讲H5</h2>
-            <ol>
-                <li>体验</li>
-                <li>功能</li>
-                <li>性能</li>
-            </ol>
 		</div>
 	    <div class="step slide">
 	        <h2>广义上</h2>
