update slide control

--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -25,7 +25,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td<img style="width: 5em;" src="css/images/lan.jpg" alt=""></td>
+                        <td><img style="width: 5em;" src="css/images/lan.jpg" alt=""></td>
                         <td><img style="width: 5em;" src="css/images/4wd.jpg" alt=""></td>
                         <td><img style="width: 5em;" src="css/images/san.jpg" alt=""></td>
                         <td><img style="width: 5em;" src="css/images/toy.jpg" alt=""></td>
@@ -80,12 +80,15 @@
 	        <h2>photowall<small>离线存储 + 本地存储 + 图片处理 + 实时通信 + 响应式布局应用</small></h2>
 	    </div>
 	    <div class="step slide">
-	        <h2>年会小火箭<small>实时通信+css3动画</small></h2>
-            <a id="reloadRocketFrame" style="cursor: pointer">刷新</a>
+	        <h2>年会小火箭<small>实时通信+css3动画+自定义字体</small></h2>
+		<a id="reloadRocketFrame" style="cursor: pointer">刷新</a>
             <iframe style="width: 100%;height: 85%;" id="rocketFrame" src="http://cloud.eggcanfly.net:3000/counter.html"></iframe>
 	    </div>
 	    <div class="step slide">
 	        <h2>图表应用<small>画图+3D效果</small></h2>
+		 <a id="to2D" style="cursor: pointer" class="chart" data-href="http://echarts.baidu.com/doc/example/map15.html">2D</a>
+		 <a id="to3D" style="cursor: pointer" class="chart" data-href="http://echarts.baidu.com/x/doc/example/map3d_population3.html">3D</a>
+		<iframe  style="width: 100%;height: 85%;" id="chartFrame" src="http://echarts.baidu.com/doc/example/map15.html"></iframe>
 	    </div>
 	    <div class="step slide">
 	        <h2>小游戏<small>bb</small></h2>
@@ -115,6 +118,7 @@
 	</div>
 	<script src="js/jquery.js"></script>
 	<script src="js/impress.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 	<script>
 		var page = $('#impress').children('.slide');
 		var firstX = -1000;
@@ -126,9 +130,18 @@
 		})
 		impress().init();
 
-        $('#reloadRocketFrame').click(function(){
-            $('#rocketFrame').attr('src', $('#rocketFrame').attr('src'));
-        });
+		$('#reloadRocketFrame').click(function(){
+		    $('#rocketFrame').attr('src', $('#rocketFrame').attr('src'));
+		});
+		$('.chart').click(function(){
+		    $('#chartFrame').attr('src', $(this).data('href'));
+		});
+		
+		var socket = io();
+		
+		socket.on('slide control',function(data){
+			impress()[data.cmd].call()
+		});
 	</script>
 </body>
 </html>
