--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -138,9 +138,8 @@
 		});
 		
 		var socket = io();
-		
 		socket.on('slide control',function(data){
-			impress()[data.cmd].call()
+			impress()[data.cmd].call();
 		});
 	</script>
 </body>
