--- a/slide/index.html
+++ b/slide/index.html
@@ -99,11 +99,44 @@
 	    <div class="step slide">
 	        <h2>涂鸦<small>bb</small></h2>
 	    </div>
-	    <div class="step slide">
-	        <h2>即时聊天<small>tom</small></h2>
+	    <div class="step slide chat chat-1">
+	        <h2>即时聊天室</h2>
+	        <img src="css/images/chat-2.png" alt="" style="max-height: 550px;">
+			<div class="content-right">
+				<h3 >基于WebSocket进行实时通信的经典应用场景</h3>
+				<p >目前已经实现以下功能：</p>
+				<ul >
+					<li>文字消息</li>
+					<li>表情符号</li>
+					<li>语音消息</li>
+					<li>图片消息</li>
+					<li>地理位置</li>
+					<li>浏览器全屏</li>
+					<li>.........</li>
+				</ul>
+			</div>
 	    </div>
-	    <div class="step slide">
-	        <h2>？？<small>tom</small></h2>
+	    <div class="step slide chat chat-2">
+	        <h2>即时聊天室</h2>
+			<div class="content">
+				<h3 >最佳体验环境：Android + Firefox(或Chrome)</h3>
+				<p > <a href="css/images/chat-qr-firefox.png" target="_blank"><img alt="" src="css/images/chat-qr-firefox.png" ></a> <a href="css/images/chat-qr-chrome.png" target="_blank"><img alt="" src="css/images/chat-qr-chrome.png" ></a> </p>
+				<p > <a href="css/images/chat-qr-room.png" target="_blank"><img alt="" src="css/images/chat-qr-room.png" ></a> <br/> <a href="http://chat.tangchanglin.com/chat.php" target="_blank">http://chat.tangchanglin.com/chat.php</a> </p>
+			</div>
+	    </div>
+	    <div class="step slide chat chat-3">
+	        <h2>即时聊天室</h2>
+			<div class="content">
+				<p >主要涉及HTML5特性</p>
+				<ul >
+					<li>通信：WebSocket</li>
+					<li>录音：getUserMedia('audio') + &lt;audio&gt;</li>
+					<li>拍照：getUserMedia('video') + &lt;video&gt; + &lt;canvas&gt; </li>
+					<li>位置：geolocation</li>
+					<li>全屏：requestFullscreen</li>
+				</ul>
+				<p ><img alt="" src="css/images/chat-screen-text.png" ><img alt="" src="css/images/chat-screen-voice.png" ><img alt="" src="css/images/chat-screen-capture.png" ><img alt="" src="css/images/chat-screen-location.png" ><img alt="" src="css/images/chat-screen-user.png" ></p>
+			</div>
 	    </div>
 	    <div class="step slide">
 	        <h2>H5能力扩展 - app自带webview提供能力</h2>
