--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -77,7 +77,24 @@
 	        </ol>
 	    </div>
 	    <div class="step slide">
-	        <h2>photowall<small>离线存储 + 本地存储 + 图片处理 + 实时通信 + 响应式布局应用</small></h2>
+	        <h2>photowall - 离线存储manifest</h2>
+	        <img src="css/images/cache.png" alt="" class="auto-img">
+	    </div>
+	    <div class="step slide">
+	        <h2>photowall - 本地存储localStorage</h2>
+	        <img src="css/images/localStorage.png" alt="" class="auto-img">
+	    </div>
+	    <div class="step slide">
+	        <h2>photowall - 图片处理</h2>
+	        <h3>1、通过input=file点击上传照片</h3>
+	        <h3>2、通过FileReader api获取照片的二进制数据</h3>
+			<h3>3、把图片渲染到设定了小尺寸的canvas</h3>
+			<h3>4、通过canvas生成base64数据</h3>
+			<h3>5、把base64通过img标签渲染到页面</h3>
+			<h3>6、可在页面缩放、旋转图片</h3>
+			<h3>7、把缩放、旋转的图片重新渲染到canvas，生成新的base64数据</h3>
+			<h3>8、通过ajax，把base64数据上传到服务器</h3>
+			<h3>9、服务器端生成想要的尺寸照片，并进一步压缩图片大小</h3>
 	    </div>
 	    <div class="step slide">
 	        <h2>年会小火箭<small>实时通信+css3动画+自定义字体</small></h2>
@@ -155,10 +172,26 @@
 			</div>
 	    </div>
 	    <div class="step slide">
-	        <h2>H5能力扩展 - app自带webview提供能力</h2>
+	        <h2>H5能力扩展 - 微信JS-SDK</h2>
+	        <h3>1、分享接口</h3>
+	        <h3>2、图像接口</h3>
+	        <h3>3、音频接口</h3>
+	        <h3>4、智能接口</h3>
+	        <h3>5、设备信息</h3>
+	        <h3>6、地理位置</h3>
+	        <h3>7、界面操作</h3>
+	        <h3>8、微信扫一扫</h3>
+	        <h3>9、微信小店</h3>
+	        <h3>10、微信卡卷</h3>
+	        <h3>11、微信支付</h3>
+	        <img src="css/images/wx.png" alt="" class="wx-img">
 	    </div>
 	    <div class="step slide">
 	        <h2>H5给设计师带来的改变</h2>
+	        <div class="center">
+		        <img src="css/images/media.jpg" alt="">
+		        <img src="css/images/media2.jpg" alt="">
+	        </div>	
 	    </div>
 	    <div class="step slide">
 	        <h2>未来</h2>
