--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -98,6 +98,10 @@
 	    </div>
 	    <div class="step slide">
 	        <h2>年会小火箭<small>实时通信+css3动画+自定义字体</small></h2>
+                <div class="img"><img src="css/images/rocket.png" />年会小火箭</div>
+	    </div>
+            <div class="step slide">
+                <h2>年会小火箭<small>实时通信+css3动画+自定义字体</small></h2>
 		<a id="reloadRocketFrame" style="cursor: pointer">刷新</a>
             <iframe style="width: 100%;height: 85%;" id="rocketFrame" src="http://cloud.eggcanfly.net:3000/counter.html"></iframe>
 	    </div>
