--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div class="qr-btn"><img src="/images/qr.png"></div>
 	<div id="impress">
 		<div id="first" class="step slide">
 	        <img src="css/images/h5.jpg" alt="">
@@ -76,6 +77,19 @@
                 <li>js sdk：获得原生应用的能力</li>
 	        </ol>
 	    </div>
+		<div class="step slide">
+			<h2>photowall</h2>
+
+
+			<iframe src="http://cloud.eggcanfly.net:3002" class="demo-frame" frameborder="0" scrolling="no"></iframe>
+			<div class="p-info">
+				<p><!-- <strike>离线存储</strike> or  -->本地存储</p>
+				<p>图片处理</p>
+				<p>实时通信</p>
+				<p>响应式布局</p>
+			</div>
+			<iframe src="http://cloud.eggcanfly.net:3002/user" class="demo-frame" frameborder="0" scrolling="no"></iframe>
+		</div>
 	    <div class="step slide">
 	        <h2>photowall - 离线存储manifest</h2>
 	        <img src="css/images/cache.png" alt="" class="auto-img">
@@ -207,6 +221,8 @@
 	</div>
 	<script src="js/jquery.js"></script>
 	<script src="js/impress.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
+	<script src="/js/index.js"></script>
 	<script>
 		var page = $('#impress').children('.slide');
 		var firstX = -1000;
@@ -218,9 +234,76 @@
 		})
 		impress().init();
 
-        $('#reloadRocketFrame').click(function(){
-            $('#rocketFrame').attr('src', $('#rocketFrame').attr('src'));
-        });
+		$('#reloadRocketFrame').click(function(){
+			$('#rocketFrame').attr('src', $('#rocketFrame').attr('src'));
+		});
+		$('.chart').click(function(){
+			$('#chartFrame').attr('src', $(this).data('href'));
+		});
+
+		var hashQrPage = {
+			'2': '/images/qr.png',
+			'5': '/images/qr.png'
+		};
+		var btn = $('.qr-btn');
+		$(window).on('hashchange',function(e){
+			var page = location.hash.split('-')[1];
+			if(hashQrPage[page]){
+				btn.find('img').attr('src',hashQrPage[page]);
+				btn.fadeIn();
+			}else{
+				if(btn.is('.open-qr')){
+					hideQr();
+				}
+				btn.fadeOut();
+			}
+		});
+
+		btn.on('click',function(){
+			if(btn.is('.open-qr')){
+				hideQr();
+			}else{
+				showQr();
+			}
+		});
+
+		function showQr(){
+			var page = location.hash.split('-')[1];
+			var w = $(window),
+					ww = w.width(),
+					wh = w.height(),
+					bw = 520,
+					bh = 520;
+			if(hashQrPage[page]){
+				btn.addClass('open-qr');
+				btn.css({
+					left: (ww - bw) / 2,
+					top: (wh - bh) / 2
+				});
+			}
+		}
+
+		function hideQr(){
+			btn.removeClass('open-qr').removeAttr('style').css({
+				display: 'block'
+			});
+		}
+
+		var socket = io();
+		//events
+		socket.on('showQr',function(data){
+			showQr();
+		});
+
+		socket.on('hideQr',function(data){
+			hideQr();
+		});
+
+		socket.on('slide control',function(data){
+
+			impress()[data.cmd].call()
+			impress()[data.cmd].call();
+		});
 	</script>
 </body>
 </html>
