--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -12,36 +12,7 @@
 	        <img src="css/images/h5.jpg" alt="">
 	        <q>深入浅出H5的应用场景</q>
 	    </div>
-		<div class="step slide">
-			<h2>大家眼中的H5</h2>
-            <table style="margin-top:20%;">
-                <thead>
-                    <tr>
-                        <th>前台</th>
-                        <th>产品</th>
-                        <th>客户端</th>
-                        <th>后台</th>
-                        <th>运营</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><img style="width: 5em;" src="css/images/lan.jpg" alt=""></td>
-                        <td><img style="width: 5em;" src="css/images/4wd.jpg" alt=""></td>
-                        <td><img style="width: 5em;" src="css/images/san.jpg" alt=""></td>
-                        <td><img style="width: 5em;" src="css/images/toy.jpg" alt=""></td>
-                        <td><img style="width: 5em;" src="css/images/ip.jpg" alt=""></td>
-                    </tr>
-                </tbody>
-            </table>
-		</div>
-	    <div class="step slide">
-	        <h2>广义上</h2>
-	        <div class="center">
-	        	<img src="css/images/def.png" alt="">
-	        	<i></i>
-	        </div>
-	    </div>
+
 	    <div class="step slide">
 	        <h2>功能列表 - html5</h2>
 	        <h3>语义化标签</h3>
@@ -54,7 +25,7 @@
 	        </ul>
 	    </div>
 	    <div class="step slide">
-	        <h2>功能列表 - css3</h2>
+	        <h2>功能列表 - <span class="font-green">css3</span></h2>
 	        <h3>选择器</h3>
 	        <h3>@Font-face web font文字渲染：实现<a href="https://icomoon.io/app/#/select">图标字体</a></h3>
 	        <h3>多列布局</h3>
@@ -68,7 +39,7 @@
 	        <img src="css/images/css-a.png" alt="">
 	    </div>
 	    <div class="step slide">
-	        <h2>功能列表 - javascript</h2>
+	        <h2>功能列表 - <span class="font-green">javascript</span></h2>
 	        <ol>
                 <li>WebSocket：实时通信&长连接</li>
                 <li>WebGL：3d效果</li>
@@ -91,68 +62,58 @@
 			<iframe src="http://cloud.eggcanfly.net:3002/user" class="demo-frame" frameborder="0" scrolling="no"></iframe>
 		</div>
 	    <div class="step slide">
-	        <h2>photowall - 离线存储manifest</h2>
+	        <h2>photowall - <span class="font-green">离线存储manifest</span></h2>
 	        <img src="css/images/cache.png" alt="" class="auto-img">
 	    </div>
 	    <div class="step slide">
-	        <h2>photowall - 本地存储localStorage</h2>
+	        <h2>photowall - <span class="font-green">本地存储localStorage</span></h2>
 	        <img src="css/images/localStorage.png" alt="" class="auto-img">
 	    </div>
-	    <div class="step slide">
-	        <h2>photowall - 图片处理</h2>
-	        <h3>1、通过input=file点击上传照片</h3>
-	        <h3>2、通过FileReader api获取照片的二进制数据</h3>
-			<h3>3、把图片渲染到设定了小尺寸的canvas</h3>
-			<h3>4、通过canvas生成base64数据</h3>
-			<h3>5、把base64通过img标签渲染到页面</h3>
-			<h3>6、可在页面缩放、旋转图片</h3>
-			<h3>7、把缩放、旋转的图片重新渲染到canvas，生成新的base64数据</h3>
-			<h3>8、通过ajax，把base64数据上传到服务器</h3>
-			<h3>9、服务器端生成想要的尺寸照片，并进一步压缩图片大小</h3>
-	    </div>
-	    <div class="step slide">
-	        <h2>年会小火箭<small>实时通信+css3动画+自定义字体</small></h2>
-                <div class="img"><img src="css/images/rocket.png" />年会小火箭</div>
-	    </div>
             <div class="step slide">
-                <h2>年会小火箭<small>实时通信+css3动画+自定义字体</small></h2>
+                <h2>年会小火箭-<span class="font-green">实时通信+css3动画+自定义字体</span></h2>
 		<a id="reloadRocketFrame" style="cursor: pointer">刷新</a>
             <iframe style="width: 100%;height: 85%;" id="rocketFrame" src="http://cloud.eggcanfly.net:3000/counter.html"></iframe>
 	    </div>
 	    <div class="step slide">
-	        <h2>图表应用<small>画图+3D效果</small></h2>
+	        <h2>图表应用<span class="font-green">画图+3D效果</span></h2>
 		 <a id="to2D" style="cursor: pointer" class="chart" data-href="http://echarts.baidu.com/doc/example/map15.html">2D</a>
 		 <a id="to3D" style="cursor: pointer" class="chart" data-href="http://echarts.baidu.com/x/doc/example/map3d_population3.html">3D</a>
 		<iframe  style="width: 100%;height: 85%;" id="chartFrame" src="http://echarts.baidu.com/doc/example/map15.html"></iframe>
 	    </div>
 	    <div class="step slide zhongli">
-			<h2>重力感应</h2>
-			<div class="img"><img src="css/images/nianhui.png" />年会摇一摇拜年</div><div class="img"><img src="css/images/yaoyouxi.png" />飞车游戏</div>
-			<div class="binbinfs">可以获取手机所处的角度、方位和朝向。<br />
-				可以获取手机运动状态下的运动加速度等数据。</div>
+			<h2>重力感应- <span class="font-green">年会摇一摇拜年</span></h2>
+			<iframe src="http://hd.3g.qq.com/g/bainian/index.html" class="demo-frame" frameborder="0" scrolling="no"></iframe>
+			<div style="float:right;width: 50%;">可以获取手机所处的角度、方位和朝向。</div>
+		</div>
+		<div class="step slide zhongli">
+			<h2>重力感应- <span class="font-green">飞车游戏</span></h2>
+			<iframe src="http://ttfc.qq.com/comm-htdocs/milo_mobile/login.html?s_url=http%3A%2F%2Fttfc.qq.com%2Fact%2Fa20140717mini%2Fgame.html&logo=" class="demo-frame" frameborder="0" scrolling="no"></iframe>
+			<div style="float:right;width: 50%;">可以获取手机运动状态下的运动加速度等数据。</div>
 		</div>
 	    <div class="step slide">
 			<h2>打飞机双人版</h2>
-			<img src="css/images/weixinhao.png" />　　　　
-			<img src="css/images/feiji.png" />
-			<div class="binbinfs">画布:处理图像,检测两个不规则图形之间的碰撞<br />
+			<iframe src="http://philgong.kf0309.3g.qq.com/g/imgclean/dafeiji/index.jsp" class="demo-frame" frameborder="0" scrolling="no"></iframe>
+			<div style="float:right;width: 50%;">
+				画布:处理图像,检测两个不规则图形之间的碰撞<br />
 				实时通信:当飞机位置发生改变或者死亡实时通知另外一名玩家
+				<br/>
+				<img style="display: block;width: 100%;" src="css/images/weixinhao.png" />　　　
 			</div>
 		</div>
 
 	    <div class="step slide">
-			<h2>刮刮卡<small>画布 + 图像处理</small></h2>
-			<img src="css/images/guagua.png" />
-			<div class="binbinfs">检测用户手指触摸屏幕图像位置的像素透明度设成0</div>
+			<h2>刮刮卡<span class="font-green">画布 + 图像处理</span></h2>
+			<iframe src="http://www.liveapp.cn/auto/index/39049?channel=1&weixin.qq.com=#wechat_webview_type=1" class="demo-frame" frameborder="0" scrolling="no"></iframe>
+			<div style="float:right;width: 50%;">检测用户手指触摸屏幕图像位置的像素透明度设成0</div>
 		</div>
 		<div class="step slide">
-			<h2>更多游戏效果展示<small></small></h2>
+			<h2>更多游戏效果展示</h2>
 			<img src="css/images/tafang.png" />
 			<img src="css/images/xuanzhuanbaojian.png" />
 		</div>
-	    <div class="step slide chat chat-1">
-	        <h2>即时聊天室</h2>
-	        <img src="css/images/chat-2.png" alt="" style="max-height: 550px;">
+		<div class="step slide chat chat-1">
+			<h2>即时聊天室</h2>
+			<iframe src="http://chat.tangchanglin.com/chat.php" width="350" height="550" ></iframe>
 			<div class="content-right">
 				<h3 >基于WebSocket进行实时通信的经典应用场景</h3>
 				<p >目前已经实现以下功能：</p>
@@ -165,18 +126,19 @@
 					<li>浏览器全屏</li>
 					<li>.........</li>
 				</ul>
+				<p class="dd">最佳体验环境：Android + Firefox(或Chrome)</p>
+				<p >
+					<a href="javascript:;" ref="css/images/chat-qr-firefox.png" target="_blank"><img alt="" src="css/images/chat-qr-firefox.png" ></a> <a href="javascript:;" ref="css/images/chat-qr-chrome.png" target="_blank"><img alt="" src="css/images/chat-qr-chrome.png" ></a> <a href="javascript:;" ref="css/images/chat-qr-room.png" target="_blank"><img alt="" src="css/images/chat-qr-room.png" ></a>
+					<br/>http://chat.tangchanglin.com/chat.php
+				</p>
 			</div>
-	    </div>
-	    <div class="step slide chat chat-2">
-	        <h2>即时聊天室</h2>
-			<div class="content">
-				<h3 >最佳体验环境：Android + Firefox(或Chrome)</h3>
-				<p > <a href="css/images/chat-qr-firefox.png" target="_blank"><img alt="" src="css/images/chat-qr-firefox.png" ></a> <a href="css/images/chat-qr-chrome.png" target="_blank"><img alt="" src="css/images/chat-qr-chrome.png" ></a> </p>
-				<p > <a href="css/images/chat-qr-room.png" target="_blank"><img alt="" src="css/images/chat-qr-room.png" ></a> <br/> <a href="http://chat.tangchanglin.com/chat.php" target="_blank">http://chat.tangchanglin.com/chat.php</a> </p>
+			<div id="qr-layer" >
+
 			</div>
-	    </div>
-	    <div class="step slide chat chat-3">
-	        <h2>即时聊天室</h2>
+			<div id="qr-wrap" ><img alt="" src="css/images/chat-qr-firefox.png" ></div>
+		</div>
+		<div class="step slide chat chat-3">
+			<h2>即时聊天室</h2>
 			<div class="content">
 				<p >主要涉及HTML5特性</p>
 				<ul >
@@ -188,7 +150,7 @@
 				</ul>
 				<p ><img alt="" src="css/images/chat-screen-text.png" ><img alt="" src="css/images/chat-screen-voice.png" ><img alt="" src="css/images/chat-screen-capture.png" ><img alt="" src="css/images/chat-screen-location.png" ><img alt="" src="css/images/chat-screen-user.png" ></p>
 			</div>
-	    </div>
+		</div>
 	    <div class="step slide">
 	        <h2>H5能力扩展 - 微信JS-SDK</h2>
 	        <h3>1、分享接口</h3>
@@ -241,9 +203,23 @@
 			$('#chartFrame').attr('src', $(this).data('href'));
 		});
 
+		$('.chat-1 .content-right a').click(function(){
+			$('#qr-wrap img').attr('src',$(this).attr("ref"));
+			$('#qr-wrap').fadeIn();
+			$('#qr-layer').fadeIn();
+		})
+		$('#qr-layer').click(function(){
+			$('#qr-wrap').fadeOut();
+			$(this).fadeOut();
+		})
+
 		var hashQrPage = {
-			'2': '/images/qr.png',
-			'5': '/images/qr.png'
+			'5': '/images/qr.png',
+			'8' : 	'css/images/rocket.png',
+			'10':'css/images/nianhui.png',
+			'11' : 'css/images/yaoyouxi.png',
+			'12' : 'css/images/feiji.png',
+			'13' : 'css/images/guagua.png'
 		};
 		var btn = $('.qr-btn');
 		$(window).on('hashchange',function(e){
