--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -52,14 +52,14 @@
 			<h2>photowall</h2>
 
 
-			<iframe src="http://cloud.eggcanfly.net:3002" class="demo-frame" frameborder="0" scrolling="no"></iframe>
+			<iframe src="http://cloud.eggcanfly.net:3002" class="demo-frame" frameborder="0"></iframe>
 			<div class="p-info">
 				<p><!-- <strike>离线存储</strike> or  -->本地存储</p>
 				<p>图片处理</p>
 				<p>实时通信</p>
 				<p>响应式布局</p>
 			</div>
-			<iframe src="http://cloud.eggcanfly.net:3002/user" class="demo-frame" frameborder="0" scrolling="no"></iframe>
+			<iframe src="http://cloud.eggcanfly.net:3002/user" class="demo-frame" frameborder="0" ></iframe>
 		</div>
 	    <div class="step slide">
 	        <h2>photowall - <span class="font-green">离线存储manifest</span></h2>
@@ -106,11 +106,6 @@
 			<iframe src="http://www.liveapp.cn/auto/index/39049?channel=1&weixin.qq.com=#wechat_webview_type=1" class="demo-frame" frameborder="0" scrolling="no"></iframe>
 			<div style="float:right;width: 50%;">检测用户手指触摸屏幕图像位置的像素透明度设成0</div>
 		</div>
-		<div class="step slide">
-			<h2>更多游戏效果展示</h2>
-			<img src="css/images/tafang.png" />
-			<img src="css/images/xuanzhuanbaojian.png" />
-		</div>
 		<div class="step slide chat chat-1">
 			<h2>即时聊天室</h2>
 			<iframe src="http://chat.tangchanglin.com/chat.php" width="350" height="550" ></iframe>
@@ -128,7 +123,9 @@
 				</ul>
 				<p class="dd">最佳体验环境：Android + Firefox(或Chrome)</p>
 				<p >
-					<a href="javascript:;" ref="css/images/chat-qr-firefox.png" target="_blank"><img alt="" src="css/images/chat-qr-firefox.png" ></a> <a href="javascript:;" ref="css/images/chat-qr-chrome.png" target="_blank"><img alt="" src="css/images/chat-qr-chrome.png" ></a> <a href="javascript:;" ref="css/images/chat-qr-room.png" target="_blank"><img alt="" src="css/images/chat-qr-room.png" ></a>
+					<a href="javascript:;" ref="css/images/chat-qr-firefox.png" target="_blank"><img alt="" src="css/images/chat-qr-firefox.png" ></a>
+					<a href="javascript:;" ref="css/images/chat-qr-chrome.png" target="_blank"><img alt="" src="css/images/chat-qr-chrome.png" ></a>
+					<a href="javascript:;" ref="css/images/chat-qr-room.png" target="_blank"><img alt="" src="css/images/chat-qr-room.png" ></a>
 					<br/>http://chat.tangchanglin.com/chat.php
 				</p>
 			</div>
@@ -219,7 +216,9 @@
 			'10':'css/images/nianhui.png',
 			'11' : 'css/images/yaoyouxi.png',
 			'12' : 'css/images/feiji.png',
-			'13' : 'css/images/guagua.png'
+			'13' : 'css/images/guagua.png',
+			'14' : 'css/images/chat-qr-room.png'
+
 		};
 		var btn = $('.qr-btn');
 		$(window).on('hashchange',function(e){
