--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -26,27 +26,29 @@
 	    </div>
 	    <div class="step slide">
 	        <h2>功能列表 - <span class="font-green">css3</span></h2>
-	        <h3>选择器</h3>
-	        <h3>@Font-face web font文字渲染：实现<a href="https://icomoon.io/app/#/select">图标字体</a></h3>
-	        <h3>多列布局</h3>
-			<h3>边框和颜色、圆角</h3>
-	        <h3>渐变效果</h3>
-	        <h3>阴影和反射</h3>
-	        <h3>背景效果</h3>
-	        <h3>盒子模型</h3>
-            <h3>响应式布局</h3>
-	        <h3>Transitions, Transforms 和 Animation</h3>
+			<ul class="intro">
+	        <li>选择器</li>
+	        <li>@Font-face web font文字渲染：实现<a href="https://icomoon.io/app/#/select">图标字体</a></li>
+	        <li>多列布局</li>
+			<li>边框和颜色、圆角</li>
+	        <li>渐变效果</li>
+	        <li>阴影和反射</li>
+	        <li>背景效果</li>
+	        <li>盒子模型</li>
+            <li>响应式布局</li>
+	        <li>Transitions, Transforms 和 Animation</li>
+			</ul>
 	        <img src="css/images/css-a.png" alt="">
 	    </div>
 	    <div class="step slide">
 	        <h2>功能列表 - <span class="font-green">javascript</span></h2>
-	        <ol>
+	        <ul class="intro">
                 <li>WebSocket：实时通信&长连接</li>
                 <li>WebGL：3d效果</li>
                 <li>Local storage和web sql：离线缓存</li>
                 <li>File Api:读写本地文件</li>
                 <li>js sdk：获得原生应用的能力</li>
-	        </ol>
+	        </ul>
 	    </div>
 		<div class="step slide">
 			<h2>photowall</h2>
@@ -94,7 +96,7 @@
 			<h2>打飞机双人版</h2>
 			<iframe src="http://philgong.kf0309.3g.qq.com/g/imgclean/dafeiji/index.jsp" class="demo-frame" frameborder="0" scrolling="no"></iframe>
 			<div style="float:right;width: 50%;">
-				画布:处理图像,检测两个不规则图形之间的碰撞<br />
+				画布:处理图像,检测两个不规则图形之间的碰撞<br /><br />
 				实时通信:当飞机位置发生改变或者死亡实时通知另外一名玩家
 				<br/>
 				<img style="display: block;width: 100%;" src="css/images/weixinhao.png" />　　　
@@ -112,7 +114,7 @@
 			<div class="content-right">
 				<h3 >基于WebSocket进行实时通信的经典应用场景</h3>
 				<p >目前已经实现以下功能：</p>
-				<ul >
+				<ul>
 					<li>文字消息</li>
 					<li>表情符号</li>
 					<li>语音消息</li>
@@ -159,17 +161,30 @@
 	        <h3>7、界面操作</h3>
 	        <h3>8、微信扫一扫</h3>
 	        <h3>9、微信小店</h3>
-	        <h3>10、微信卡卷</h3>
+	        <h3>10、微信卡券</h3>
 	        <h3>11、微信支付</h3>
-	        <img src="css/images/wx.png" alt="" class="wx-img">
+	        <img src="css/images/2015.jpg" alt="" class="wx-img">
 	    </div>
+		<div class="step slide">
+			<h2>H5能力扩展 - 微信JS-SDK</h2>
+			<img src="css/images/bjx.PNG" style="width:40%;margin-right: 10%;" alt="" class="">
+		</div>
+		<div class="step slide">
+			<h2>H5能力扩展 - 微信JS-SDK</h2>
+			<img src="css/images/IMG_0012.jpg" style="width:80%;margin-right: 10%;" alt="" class="">
+		</div>
+		<div class="step slide">
+			<h2>H5能力扩展 - 微信JS-SDK</h2>
+			<img src="css/images/taxi.png" style="width:40%;margin-right: 10%;" alt="" class="">
+			<img src="css/images/qb.png" style="width:40%" alt="" class="">
+		</div>
 	    <div class="step slide">
 	        <h2>H5给设计师带来的改变</h2>
 	        <div class="center">
 		        <img src="css/images/media.jpg" alt="">
-		        <img src="css/images/media2.jpg" alt="">
-	        </div>	
-	    </div>
+				<iframe style="width: 100%;height: 55%;" src="http://ianlunn.github.io/Hover/"/>
+			</div>
+		</div>
 	    <div class="step slide">
 	        <h2>未来</h2>
 	        <div class="center">
