--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -182,7 +182,7 @@
 	        <h2>H5给设计师带来的改变</h2>
 	        <div class="center">
 		        <img src="css/images/media.jpg" alt="">
-				<iframe style="width: 100%;height: 55%;" src="http://ianlunn.github.io/Hover/"/>
+				<iframe style="width: 100%;height: 55%;" src="http://ianlunn.github.io/Hover/"></iframe>
 			</div>
 		</div>
 	    <div class="step slide">
