--- a/public/slide/index.html
+++ b/public/slide/index.html
@@ -167,7 +167,7 @@
 	    </div>
 		<div class="step slide">
 			<h2>H5能力扩展 - 微信JS-SDK</h2>
-			<img src="css/images/bjx.PNG" style="width:40%;margin-right: 10%;" alt="" class="">
+			<img src="css/images/bjx.png" style="width:40%;margin-right: 10%;" alt="" class="">
 		</div>
 		<div class="step slide">
 			<h2>H5能力扩展 - 微信JS-SDK</h2>
